--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "core-js": "^3.41.0",
+    "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
