--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "core-js": "^3.41.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
+    "motion": "^12.9.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-svg": "^16.3.0",
     "recharts": "^2.15.2",
     "slick-carousel": "^1.8.1",
     "tailwind": "^4.0.0",
@@ -50,6 +52,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "webpack": "^5.99.7",
+    "webpack-dev-server": "^5.2.1"
   }
 }
