--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
     "core-js": "^3.41.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.487.0",
     "motion": "^12.9.2",
+    "papaparse": "^5.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
